--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,9 +13,27 @@ body {
   color: #444444;
 }
 /* edited classes*/
+*{
+  border:0px solid red;
+}
+.apply-btn {
+  
+  
+  letter-spacing: 1px;
+  display: inline-block;
+  padding: 12px 32px;
+  border-radius: 50px;
+  transition: 0.5s;
+  line-height: 1;
+  margin: 10px;
+  color: #fff;
+  -webkit-animation-delay: 0.8s;
+  animation-delay: 0.8s;
+ 
+}
+
  .icon-box {
-  width: 20%;
-  margin: auto;
+  
   padding: 30px;
   position: relative;
   overflow: hidden;
@@ -40,7 +58,9 @@ body {
 }
 
  .icon-box:hover::before {
-  background: #f17c1c;
+  /* background: #f17c1c; */
+  background: url(../img/bg1234.jpg) top center; 
+  background-size: cover;
   right: 0;
   top: 0;
   width: 100%;
@@ -95,7 +115,13 @@ body {
 
 .sponsor-head-title
 {
-  width: 100%;background-color: #f17c1c;color: white; border-radius:10px ;padding: 10px 0px 5px 0px;
+  background: url(../img/bg1234.jpg) top center;
+  background-size: cover;
+  width: 100%;
+  /* background-color: #f17c1c; */
+  color: white; 
+  border-radius:10px ;
+  padding: 10px 0px 5px 0px;
 }
 .orange{
   color: #f17c1c;
@@ -109,6 +135,7 @@ body {
   text-align: center;
   background: #f17c1c;
   position: relative;
+  
 }
 
 .animated-btn::before, .animated-btn::after {
@@ -122,7 +149,7 @@ body {
   border-radius: 50%;
   background: #f17c1c;
   animation: ripple-1 2s infinite ease-in-out;
-  z-index: -1;
+ z-index: -1;
 }
 
 .animated-btn::after {
@@ -288,11 +315,13 @@ h1, h2, h3, h4, h5, h6 {
   border-radius: 50px;
   margin: 0 0 0 30px;
   padding: 10px 25px;
+  border:1px solid #f17c1c;
 }
 
 .nav-menu .get-started a:hover {
-  background: #57aae1;
-  color: #fff;
+  background: white;
+  color:#f17c1c;
+  border:1px solid #f17c1c;
 }
 
 .nav-menu .drop-down ul {
@@ -503,8 +532,12 @@ h1, h2, h3, h4, h5, h6 {
 --------------------------------------------------------------*/
 #hero {
   width: 100%;
-  height: 70vh;
+  height: 100vh;
   margin-top: 70px;
+  background: url(../img/bg32.jpg) top center;
+  background-size: cover;
+  background-attachment: local;
+
 }
 
 #hero h1 {
@@ -513,6 +546,7 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 700;
   line-height: 56px;
   color: black;
+ 
 }
 
 #hero h2 {
@@ -624,6 +658,17 @@ section {
   padding-bottom: 30px;
 }
 
+/* .section-title::before,.section-title::after{
+  content: '';
+  position: absolute;
+  display: block;
+  width: 60px;
+  height: 5px;
+  background: #f82249;
+  bottom: 0;
+  left: calc(50% - 25px);
+  top: calc(50px);
+} */
 .section-title h2 {
   font-size: 32px;
   font-weight: bold;
@@ -632,16 +677,25 @@ section {
   color: #222222;
 }
 
-.section-title h2::before, .section-title h2::after {
+/* .section-title h2::before, .section-title h2::after {
   content: '';
   width: 50px;
   height: 2px;
   background: #f17c1c;
   display: inline-block;
-}
+} */
 
 .section-title h2::before {
   margin: 0 15px 10px 0;
+  /* content: '';
+  position: absolute;
+  display: block;
+  width: 60px;
+  height: 5px;
+  background: #f82249;
+  bottom: 0;
+  left: calc(50% - 25px);
+  top: calc(43px); */
 }
 
 .section-title h2::after {
@@ -655,8 +709,12 @@ section {
 /*--------------------------------------------------------------
 # Clients
 --------------------------------------------------------------*/
-.clients {
+.sponsor-bg{
   background: #f3f9fd;
+  border-radius: 5px;
+}
+.clients {
+  
   padding: 10px 0;
   text-align: center;
 }
@@ -701,19 +759,23 @@ section {
 
 @media (max-width: 768px) {
   .clients img {
-    width: 40%;
+    /* width: 40%; */
   }
 }
 
 @media (max-width: 575px) {
   .clients img {
-    width: 30%;
+    /* width: 30%; */
   }
 }
 
 /*--------------------------------------------------------------
 # About Us
 --------------------------------------------------------------*/
+#about{
+ background: url(../img/bg1234.jpg) top center; 
+  background-size: cover;
+}
 .about .content h3 {
   font-weight: 600;
   font-size: 26px;
@@ -852,7 +914,7 @@ section {
 # Services
 --------------------------------------------------------------*/
 .services .icon-box {
-  width: 20%;
+  /* width: 20%; */
   margin: auto;
   padding: 30px;
   position: relative;
@@ -878,7 +940,9 @@ section {
 }
 
 .services .icon-box:hover::before {
-  background: #f17c1c;
+  /* background: #3f342b; */
+  background: url(../img/bg1234.jpg) top center; 
+  background-size: cover;
   right: 0;
   top: 0;
   width: 100%;
@@ -1250,7 +1314,7 @@ section {
 # Team
 --------------------------------------------------------------*/
 .team .icon-box {
-  width: 20%;
+  /* width: 20%; */
   margin: auto;
   padding: 30px;
   position: relative;
@@ -1276,7 +1340,9 @@ section {
 }
 
 .team .icon-box:hover::before {
-  background: #f17c1c;
+  /* background: #f17c1c; */
+  background: url(../img/bg1234.jpg) top center; 
+  background-size: cover;
   right: 0;
   top: 0;
   width: 100%;
@@ -1508,6 +1574,11 @@ section {
 /*--------------------------------------------------------------
 # F.A.Q
 --------------------------------------------------------------*/
+#faq{
+  background: url(../img/bg21.jpg) top center;
+  background-size: cover;
+  color: white;
+}
 .faq .faq-item {
   margin: 20px 0;
   padding: 20px 0;
@@ -1515,7 +1586,7 @@ section {
 }
 
 .faq .faq-item i {
-  color: #8bc4ea;
+  color: white;
   font-size: 24px;
   float: left;
   line-height: 0;
@@ -1538,6 +1609,10 @@ section {
 /*--------------------------------------------------------------
 # Contact
 --------------------------------------------------------------*/
+$contact{
+  background: url(../img/bg1234.jpg) top center;
+  background-size: cover;
+}
 .contact .contact-about h3 {
   font-size: 28px;
   margin: 0 0 10px 0;
@@ -1817,7 +1892,9 @@ section {
 }
 
 #footer .footer-top {
-  background: #010208;
+  /* background: #010208; */
+  background: url(../img/bg32.jpg) top center; 
+  background-size: cover;
   padding: 60px 0 30px 0;
 }
 
