--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,42 @@ body {
   color: #444444;
 }
 /* edited classes*/
+#devfolio-apply-now {
+  font-family: "Raleway", sans-serif;
+  
+  letter-spacing: 1px;
+  display: inline-block;
+  padding: 10px 30px;
+  border-radius: 50px;
+  transition: 0.5s;
+  color: #f17c1c;
+  border: 2px solid #f17c1c;
+  margin: 20px 0px 20px 0px;
+  -ms-flex-align: center;
+  -webkit-box-align: center;
+  align-items: center;
+  background-color: #f17c1c;
+  
+  border: none;
+  color: #FFFFFF;
+  cursor: pointer;
+  display: -ms-flexbox;
+  display: -webkit-box;
+  display: flex;
+  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; */
+  font-size: 18px;
+  font-weight: 600;
+  padding: 12px 20px;
+  text-align: center;
+  text-transform: lowercase;
+}
+
+#devfolio-apply-now:not([disabled]) {
+  cursor: pointer;
+}
+
+
+
 *{
   border:0px solid red;
 }
