--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -153,7 +153,7 @@ body {
 {
   background: url(../img/bg1234.jpg) top center;
   background-size: cover;
-  width: 70%;
+  max-width: 90%;
   /* background-color: #f17c1c; */
   color: white; 
   border-radius:10px ;
