--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,7 @@ body {
   top: 0;
   left: 0;
   background-color: rgb(255, 255, 255);
+  background-attachment: fixed;
   width: 100%;
   height: 100vh;
   z-index: 99997;
