--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1556,7 +1556,7 @@ padding: 0px 20px 0px 20px;
 .giftcard {
   margin: 20px;
   width: 330px;
-  height: 380px;
+  height: 440px;
   overflow: hidden;
   position: relative;
   border-radius: 10px;
@@ -1576,31 +1576,47 @@ padding: 0px 20px 0px 20px;
   .giftcard .overlay-content{
   width: 100%;
   height: 80%;
-  /* background-color: #ffeac9; */
+  /* background-color: #ffffff; */
   background: url(../img/bg32.jpg);
   background-size: cover;
   box-shadow: 1px -2px 10px rgba(0,0,0,0);
   color: #080808;
   border-radius: 10px;
-  display: flex;
+  /* display: flex;
   justify-content: center;
   align-items: center;
-  overflow: hidden;
+  overflow: hidden; */
+ 
   position: absolute;
   z-index: 1;
-  
+  padding: 10px 0px;
   transition: transform 0.4s, box-shadow 0.6s;
   top: 100%;
   left: 0%;
   opacity: 1;
   }
+ #giftcard1{
+   width: 460px;
+   height: 370px;
+  
+ }
+ #giftcard1 .overlay-content{
+   padding: 10px;
+ }
+ #giftcard2{
+  width: 460px;
+  height: 370px;
  
+}
+#giftcard2 .overlay-content{
+  padding: 10px;
+}
   .giftcard .upper-content{
   width: 100%;
   height: 100%;
   
   /* background-color: #ffeac9; */
-  background: url(../img/bg22.jpg);
+  background: url(../img/bg21.jpg);
   background-size: cover;
   color: #ffffff;
   display: flex;
@@ -1621,16 +1637,23 @@ padding: 0px 20px 0px 20px;
   }
   .giftcard:hover .overlay-content {
   /* left: 0; */
-  transform: translateY(-90%);
+  transform: translateY(-100%);
   box-shadow: 1px -2px 10px rgba(0,0,0,0.5);
   }
   .giftcard:hover .upper-content {
   /* left: 0; */
-  transform: translateY(-40%);
+  transform: translateY(-50%);
   }
   .giftcard:hover .upper-content h1{
-      transform: translateY(40%);
+      transform: translateY(120%);
   }
+  #giftcard1:hover .upper-content {
+    /* left: 0; */
+    transform: translateY(-57%);
+    }
+    #giftcard1:hover .upper-content h1{
+        transform: translateY(120%);
+    }
   .giftcard .overlay-content p {
   text-align: center;
   font-size: 15px;
@@ -1649,14 +1672,60 @@ padding: 0px 20px 0px 20px;
   @media (max-width: 1024px) {
   .giftcard {
       width: 250px;
-      height: 310px;
+      height: 370px;
   }
-  .giftcard .upper-content h1{
+  .giftcard .upper-content {
     font-size: 23px;
   }
-  .giftcard .overlay-content p{
+  .giftcard .overlay-content{
     font-size: 13px;
   }
+  #giftcard1{
+    padding: 30px;
+    height: 260px;
+    font-size: 13px;
+  }
+  #giftcard2{
+    padding: 30px;
+    height: 260px;
+    font-size: 13px;
+  }
+  #giftcard2:hover .upper-content {
+    /* left: 0; */
+    transform: translateY(-55%);
+    }
+    #giftcard2:hover .upper-content h1{
+        transform: translateY(120%);
+    }
+  }
+  @media (max-width: 700px) {
+    #giftcard1{
+      width: 300px;
+      height: 350px;
+      font-size: 13px;
+     
+    }
+    #giftcard1:hover .upper-content {
+      /* left: 0; */
+      transform: translateY(-52%);
+      }
+      #giftcard1:hover .upper-content h1{
+          transform: translateY(120%);
+      }
+      #giftcard2{
+        width: 300px;
+        height: 350px;
+        font-size: 13px;
+       
+      }
+      #giftcard2:hover .upper-content {
+        /* left: 0; */
+        transform: translateY(-53%);
+        }
+        #giftcard2:hover .upper-content h1{
+            transform: translateY(90%);
+        }
+     
   }
 /*--------------------------------------------------------------
 # Team
