--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -424,6 +424,7 @@ h1, h2, h3, h4, h5, h6 {
 # Header
 --------------------------------------------------------------*/
 #header {
+  background: white;
   z-index: 997;
   transition: all 0.5s;
   padding: 22px 0;
