--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -792,7 +792,62 @@ a:hover {
 h1, h2, h3, h4, h5, h6 {
   font-family: "Raleway", sans-serif;
 }
+/*--------------------------------------------------------------
+# Timer
+--------------------------------------------------------------*/
+.modal h4{
+  font-size: 1.3em;
+}
+#timer 
+{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: url(../img/bg1234.jpg);
+    background-size: cover;
+  
+    background-attachment: fixed;
+}
+#timer .overlay{
+  padding: 30px 0px;
+  background: rgba(0, 0, 0, 0.08);
+  width: 100%;
+  height: auto;
+  margin: 0px;
+}
+#timer h1{
+  
+  font-size: 2.4em;
+  color: white;
+}
+#timer p{
 
+  font-size: 2em;
+  color: white;
+}
+#timer pre{
+
+  font-size: 1em;
+  color: white;
+}
+@media (max-width:720px)
+{
+  #timer h1{
+  
+    font-size: 2em;
+    color: white;
+  }
+  #timer p{
+  
+    font-size: 1.5em;
+    color: white;
+  }
+  #timer pre{
+  
+    font-size: 0.8em;
+    color: white;
+  }
+}
 /*--------------------------------------------------------------
 # Back to top button
 --------------------------------------------------------------*/
@@ -1135,7 +1190,7 @@ h1, h2, h3, h4, h5, h6 {
   background: url(../img/bg32.jpg) top center;
   background-size: cover;
   background-attachment: local;
-
+  padding-bottom: 30px;
 }
 
 #hero h1 {
@@ -1424,6 +1479,7 @@ padding: 0px 20px 0px 20px;
 #about{
  background: url(../img/bg1234.jpg) top center; 
   background-size: cover;
+  background-attachment: local;
 }
 .about .content h3 {
   font-weight: 600;
