--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1199,7 +1199,7 @@ h1, h2, h3, h4, h5, h6 {
   margin-top: 70px;
   background: url(../img/bg32.jpg) top center;
   background-size: cover;
-  background-attachment: local;
+  background-attachment: fixed;
  
 }
 
