--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2121,6 +2121,9 @@ padding: 0px 20px 0px 20px;
 #giftcard2 .overlay-content{
   padding: 10px;
 }
+#girlsteam{
+  font-size: 14.3px;
+}
   .giftcard .upper-content{
   width: 100%;
   height: 100%;
@@ -2178,7 +2181,10 @@ padding: 0px 20px 0px 20px;
   }
 
   @media (max-width: 1024px) {
-  .giftcard {
+    #girlsteam{
+      font-size: 11.6px;
+    }
+  .giftcard { 
       width: 265px;
       height: 375px;
   }
@@ -2218,12 +2224,15 @@ padding: 0px 20px 0px 20px;
     }
   }
   @media (max-width:550px){
+   
     .giftcard{
       width: 265px;
     }
   }
   @media (max-width: 700px) {
-    
+    #girlsteam{
+      font-size: 11.6px;
+    }
     .giftcard .upper-content h1{
       font-size: 20px;
     }
